--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -48,6 +48,7 @@ jobs:
 #        run: mvn package -DskipTests
 
       - name: Set up Docker Buildx
-        working-directory: ./my-java-app
         uses: docker/setup-buildx-action@v2
+        with:
+          buildkitd-flags: --debug
  
