--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -51,4 +51,9 @@ jobs:
         uses: docker/setup-buildx-action@v2
         with:
           buildkitd-flags: --debug
- 
+
+      - name: Docker build
+        uses: docker/build-push-action@v4
+        working-directory: ./my-java-app
+        with:
+          context: .
