--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -49,11 +49,11 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        working-directory: ./my-java-app
         with:
           buildkitd-flags: --debug
 
       - name: Docker build
         uses: docker/build-push-action@v4
         with:
-          context: .
+          file: my-java-app/Dockerfile
+          context: my-java-app
