Jenkinsfile for maven bbuilding

--- a/JenkinsPipeline/Jenkinsfile
+++ b/JenkinsPipeline/Jenkinsfile
@@ -1,20 +1,38 @@
 pipeline{
+    tools { 
+        maven 'maven' 
+        jdk 'jdk17' 
+    }    
     agent any
     stages {
+        
         stage('Git Clone') {
             steps{
-                git credentialsId: 'ec2-jenkins-private-key',
+                git credentialsId: 'ec2-jenkins-private-key', 
                 url: 'git@github.com:divyar28/Terraform-ansible-provision-bootstrap-repo.git'
              }
         }
+        
         stage('Terraform'){
             steps{
+            
                dir("ANSIBLE-JENKINS"){
+
                     sh '''
                         ls -ltr
                     '''
                }
             }
         }
+        
+        stage('Maven Build'){
+            steps{
+            
+               dir("my-java-app"){
+                sh 'mvn package -DskipTests'
+
+               }
+            }
+        }        
     }
 }
