--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -52,6 +52,22 @@ jobs:
         with:
           buildkitd-flags: --debug
 
+      - name: Login to Jfrog
+        uses: docker/login-action@v1
+        with:
+          registry: test1919.jfrog.io
+          username: ${{ secrets.JFROG_USERNAME }}
+          password: ${{ secrets.JFROG_PASSWORD }}
+
+      - name: Build and push
+        id: docker build
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: test1919.jfrog.io/myjavaappdocker/hello-world:3.0.0
+          file: my-java-app/Dockerfile
+          context: my-java-app
+
       - name: Docker build
         uses: docker/build-push-action@v4
         with:
