--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -60,7 +60,7 @@ jobs:
           password: ${{ secrets.JFROG_PASSWORD }}
 
       - name: Build and push
-        id: docker build
+        id: docker_build
         uses: docker/build-push-action@v4
         with:
           push: true
