--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -68,8 +68,14 @@ jobs:
           file: my-java-app/Dockerfile
           context: my-java-app
 
-      - name: Docker build
-        uses: docker/build-push-action@v4
-        with:
-          file: my-java-app/Dockerfile
-          context: my-java-app
+#     - name: Docker build
+#        uses: docker/build-push-action@v4
+#        with:
+#          file: my-java-app/Dockerfile
+#          context: my-java-app
+
+     # setup Helm
+       - name: Setup Helm
+         uses: azure/setup-helm@b5b231a831f96336bbfeccc1329990f0005c5bb1
+         with:
+           version: 'v3.10.1
