--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -78,4 +78,4 @@ jobs:
        - name: Setup Helm
          uses: azure/setup-helm@b5b231a831f96336bbfeccc1329990f0005c5bb1
          with:
-           version: 'v3.10.1
+           version: 'v3.10.1'
