--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -75,7 +75,7 @@ jobs:
 #          context: my-java-app
 
      # setup Helm
-       - name: Setup Helm
-         uses: azure/setup-helm@b5b231a831f96336bbfeccc1329990f0005c5bb1
-         with:
-           version: 'v3.10.1'
+#       - name: Setup Helm
+#        uses: azure/setup-helm@b5b231a831f96336bbfeccc1329990f0005c5bb1
+ #        with:
+  #         version: 'v3.10.1'
