--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: gha basic
+name: gha Java Maven Build
 
 # Controls when the workflow will run
 on:
