--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: gha Java Maven Build
+name: gha basic
 
 # Controls when the workflow will run
 on:
@@ -37,13 +37,11 @@ jobs:
           ls -ltr
           pwd
 
-#      - name: Set up JDK 17
-#       uses: actions/setup-java@v3
-#        with:
-#         java-version: '17'
-#         distribution: 'temurin'
-      # build the my-java-app with mvn command locally within the 
-      # gha runner
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
 #      - name: Build with Maven
 #        working-directory: ./my-java-app
@@ -60,23 +58,13 @@ jobs:
           registry: test1919.jfrog.io
           username: ${{ secrets.JFROG_USERNAME }}
           password: ${{ secrets.JFROG_PASSWORD }}
-   
-      - name: Get Latest Git commit Hash
-        id: git_commit_hash
-        run: |
-          echo "GIT_COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
-      - name: print Latest Git commit Hash
-        run: |
-          echo ${{ steps.git_commit_hash.outputs.GIT_COMMIT_HASH }}
-          echo "GIT_LATEST_COMMIT=${{ steps.git_commit_hash.outputs.GIT_COMMIT_HAsH }}" >> $GITHUB_ENV
-     
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: test1919.jfrog.io/myjavapp/myfirstjavaapp:${{ env.GIT_LATEST_COMMIT }}
+          tags: test1919.jfrog.io/myjavaappdocker/hello-world:3.0.0
           file: my-java-app/Dockerfile
           context: my-java-app
 
